DV-000204: Fix services and one controller.